# xp_gym

./: README.md  compute-ate.py  plot_estimator_results.py  pyproject.toml
scripts/: compute-ate.py  plot_estimator_results.py  run.py
scripts/config/: config.yaml  limited_memory.yaml
scripts/config/design/: unit_randomized.yaml
scripts/config/env/: abtest.yaml  rideshare_pricing.yaml
scripts/config/estimators/: naive.yaml
xp_gym/: observation.py  simulator.py
xp_gym/designs/: design.py
xp_gym/environments/: __init__.py  abtest.py  environment.py  limited_memory.py  rideshare.py
xp_gym/estimators/: dm.py  dn.py  dn_v2.py  dq.py  dynkin.py  estimator.py  ht.py  limited_memory.py  lstd_lambda.py  naive.py  network.py  rideshare.py  sw_tpg.py  tpg.py
