[tool.poetry]
name = "xp-gym"
version = "0.1.0"
description = ""
authors = ["Andrew Zheng <azheng92@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jax = "^0.5.1"
flax = "^0.10.4"
chex = "^0.1.89"
jaxtyping = "^0.2.38"
gymnax = "^0.0.8"
hydra-core = "^1.3.2"
or-gymnax = {git = "https://github.com/atzheng/or-gymnax.git"}
pyarrow = "^21.0.0"
tqdm = "^4.67.1"
haversine = "^2.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
